# hefty-compilation

./: .gitignore  Algebraic.agda  Compiler.agda  Hefty.agda  PHOAS.hs  README.md  ccc.txt  hefty-compilation.agda-lib  hoas-recovery.txt
Postulates/: Extensionality.agda
continuations/: Continuations.hs
evcs/: cover.md  hefty-compilation-evcs.key  review-summary.md
evcs/src/: document.tex  references.bib
evcs/tex/: makefile
evcs/tex/src/: document.tex  references.bib  unicode.tex
haskell/: .gitignore  build.sh  cabal.project  hefty-compilation.cabal  runtime.c  runtime.h
haskell/app/: Main.hs
haskell/src/: Hefty.hs
haskell/src/Experiment/: Synth.hs  Synth3.hs
haskell/src/Hefty/: Compilation.hs
haskell/src/Hefty/Compilation/: Arith.hs  Block.hs  Common.hs  Cond.hs  Let.hs  Read.hs  X86.hs  X86Var.hs
nl-fp-day/: embedding-generalized-parsing-in-haskell.key  hefty-compilation-fp-day.key
seminar/: seminar-talk.key
sle23/: Makefile  document.lhs  document.tex
sle23/sections/: 1-intro.lhs
