cabal-version:   3.0
name:            hefty-compilation
version:         0.1.0.0
license:         NONE
author:          jaro.reinders@gmail.com
maintainer:      Jaro Reinders
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hefty-compiler
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0, hefty-compilation, hefty
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -Wall

library
    exposed-modules: Hefty.Compilation, 
                     Hefty.Compilation.Arith,
                     Hefty.Compilation.Block,
                     Hefty.Compilation.Common,
                     Hefty.Compilation.Let,
                     Hefty.Compilation.Read,
                     Hefty.Compilation.X86,
                     Hefty.Compilation.X86Var
    build-depends: base, hefty
    hs-source-dirs: src
    default-language: GHC2021